백엔드 전체 기능 구현 완료 및 구조 정리